@@ -199,6 +199,31 @@ In Playlist</property>
 	  <property name="spacing">0</property>
 
 	  <child>
+	    <widget class="GtkEventBox" id="eventbox1">
+	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">MPD database is updating.</property>
+	      <property name="visible_window">True</property>
+	      <property name="above_child">False</property>
+
+	      <child>
+		<widget class="GtkImage" id="image_updating">
+		  <property name="stock">gtk-refresh</property>
+		  <property name="icon_size">4</property>
+		  <property name="xalign">0.5</property>
+		  <property name="yalign">0.5</property>
+		  <property name="xpad">0</property>
+		  <property name="ypad">0</property>
+		</widget>
+	      </child>
+	    </widget>
+	    <packing>
+	      <property name="padding">0</property>
+	      <property name="expand">False</property>
+	      <property name="fill">True</property>
+	    </packing>
+	  </child>
+
+	  <child>
 	    <widget class="GtkStatusbar" id="statusbar1">
 	      <property name="visible">True</property>
 	      <property name="has_resize_grip">False</property>
